fix overflowing containers on rover page

--- a/css/app.css
+++ b/css/app.css
@@ -323,21 +323,13 @@ main {
     margin: 0 auto;
 }
 
-.roverContent .container {
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.roverContent .roverContainer {
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border: none;
 }
 
-.roverContent .container:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-}
-
-.roverContent .container img {
+.roverContent .roverContainer img {
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -346,7 +338,7 @@ main {
     border: none;
 }
 
-.roverContent .container img:hover {
+.roverContent .roverContainer img:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
@@ -359,6 +351,10 @@ main {
     text-align: center;
     font-weight: bold;
     border-radius: 0 0 10px 10px;
+}
+
+.roverContainer {
+    max-width: 250px;
 }
 
 body.dark-mode {
